--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
   <head>
     <meta charset="utf-8">
@@ -13,34 +9,193 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <header>
-      <div class='user-dropdown'>
-        <label for='admin-dropdown'></label>
-        <select id='user-dropdown' name='user-dropdown'>
-          <option value='test'>Admin Username</option>
+    <header> 
+      <div class='dropdown-menu'>
+        <img src='./assets/user-white.svg' class='user-avatar'>
+        <select>
+          <option>Admin Username</option>
         </select>
-      </div>
-      <div class='nav-bar'>
+      </div> 
+      <div class="nav-bar">
         <img src='./assets/badge.webp' class='logo'>
-        <nav>
-          <button class='nav-button'><img src='./assets/share.png'>SHARES</button>
-          <button class='nav-button'><img src='./assets/list.svg'>PLAYLISTS</button>
-          <button class='nav-button'><img src='./assets/user.svg'>PERSONAL VIDEOS</button>
-        </nav>   
-      </div>
+        <nav class='nav-buttons'>
+          <button class="shares-button"><img src='./assets/share.png'>SHARES</button>
+          <button class="playlists-button"><img src='./assets/list.svg'>PLAYLISTS</button>
+          <button class="personal-videos-button"><img src='./assets/user.svg'>PERSONAL VIDEOS</button>
+        </nav>
+      </div>  
     </header>
-    <main>
-      <h1>Shares</h1>
-      <section class="card-container">
-        <article class="card">1</article>
-        <article class="card">2</article>
-        <article class="card">3</article>
-        <article class="card">4</article>
-        <article class="card">5</article>
-        <article class="card">6</article>
-        <article class="card">7</article>
-        <article class="card">8</article>
-      </section>
-    </main>
+    <h1 class="shares-header">Shares</h1>
+    <section class='card-container'>
+      <!-- card1 -->
+      <article class='card'>
+        <div class='profile-pic-1'>
+          <button class='share-button'></button>
+          <div class='view-display'>
+            <p class='view-header'>VIEWS</p>
+            <p class='view-counter'>02</p>
+          </div>
+        </div>
+        <div class='card-text-container'>
+          <h2>Rick Sanchez C-137</h2>
+          <p class='post-date'>Monday 01/23/16 10:22am</p>
+          <div class='url-box'>
+            <p class='post-url'>http://2win.2winstage.com/p/recipients_namehere</p>
+          </div>
+          <p class='playlist-heading'>PLAYLIST</p>
+          <h2 class='playlist-name'>Name of PlayList</h2>
+          <p class='attachments-header'>ATTACHMENTS</p>
+          <h1 class='attachments-counter'>04</h1>
+        </div>
+      </article>
+      <!-- card2 -->
+      <article class='card'>
+        <div class='profile-pic-2'>
+          <button class='share-button'></button>
+          <div class='view-display'>
+            <p class='view-header'>VIEWS</p>
+            <p class='view-counter'>02</p>
+          </div>
+        </div>
+        <div class='card-text-container'>
+          <h2>Rick D99 (SEAL Team Rix)</h2>
+          <p class='post-date'>Monday 01/23/16 10:22am</p>
+          <div class='url-box'>
+            <p class='post-url'>http://2win.2winstage.com/p/recipients_namehere</p>
+          </div>
+          <p class='playlist-heading'>PLAYLIST</p>
+          <h2 class='playlist-name'>Name of PlayList</h2>
+          <p class='attachments-header'>ATTACHMENTS</p>
+          <h1 class='attachments-counter'>04</h1>
+        </div>
+      </article>
+      <!-- card3 -->
+      <article class='card'>
+        <div class='profile-pic-3'>
+          <button class='share-button'></button>
+          <div class='view-display'>
+            <p class='view-header'>VIEWS</p>
+            <p class='view-counter'>02</p>
+          </div>
+        </div>
+        <div class='card-text-container'>
+          <h2>Rick D. Sanchez III</h2>
+          <p class='post-date'>Monday 01/23/16 10:22am</p>
+          <div class='url-box'>
+            <p class='post-url'>http://2win.2winstage.com/p/recipients_namehere</p>
+          </div>
+          <p class='playlist-heading'>PLAYLIST</p>
+          <h2 class='playlist-name'>Name of PlayList</h2>
+          <p class='attachments-header'>ATTACHMENTS</p>
+          <h1 class='attachments-counter'>04</h1>
+        </div>
+      </article>
+      <!-- card4 -->
+      <article class='card'>
+        <div class='profile-pic-4'>
+          <button class='share-button'></button>
+          <div class='view-display'>
+            <p class='view-header'>VIEWS</p>
+            <p class='view-counter'>02</p>
+          </div>
+        </div>
+        <div class='card-text-container'>
+          <h2>Cool Rick</h2>
+          <p class='post-date'>Monday 01/23/16 10:22am</p>
+          <div class='url-box'>
+            <p class='post-url'>http://2win.2winstage.com/p/recipients_namehere</p>
+          </div>
+          <p class='playlist-heading'>PLAYLIST</p>
+          <h2 class='playlist-name'>Name of PlayList</h2>
+          <p class='attachments-header'>ATTACHMENTS</p>
+          <h1 class='attachments-counter'>04</h1>
+        </div>
+      </article>
+      <!-- card5 -->
+      <article class='card'>
+        <div class='profile-pic-5'>
+          <button class='share-button'></button>
+          <div class='view-display'>
+            <p class='view-header'>VIEWS</p>
+            <p class='view-counter'>02</p>
+          </div>
+        </div>
+        <div class='card-text-container'>
+          <h2>Rick D716</h2>
+          <p class='post-date'>Monday 01/23/16 10:22am</p>
+          <div class='url-box'>
+            <p class='post-url'>http://2win.2winstage.com/p/recipients_namehere</p>
+          </div>
+          <p class='playlist-heading'>PLAYLIST</p>
+          <h2 class='playlist-name'>Name of PlayList</h2>
+          <p class='attachments-header'>ATTACHMENTS</p>
+          <h1 class='attachments-counter'>04</h1>
+        </div>
+      </article>
+      <!-- card6 -->
+      <article class='card'>
+        <div class='profile-pic-6'>
+          <button class='share-button'></button>
+          <div class='view-display'>
+            <p class='view-header'>VIEWS</p>
+            <p class='view-counter'>02</p>
+          </div>
+        </div>
+        <div class='card-text-container'>
+          <h2>Rick D716-B</h2>
+          <p class='post-date'>Monday 01/23/16 10:22am</p>
+          <div class='url-box'>
+            <p class='post-url'>http://2win.2winstage.com/p/recipients_namehere</p>
+          </div>
+          <p class='playlist-heading'>PLAYLIST</p>
+          <h2 class='playlist-name'>Name of PlayList</h2>
+          <p class='attachments-header'>ATTACHMENTS</p>
+          <h1 class='attachments-counter'>04</h1>
+        </div>
+      </article>
+      <!-- card7 -->
+      <article class='card'>
+        <div class='profile-pic-7'>
+          <button class='share-button'></button>
+          <div class='view-display'>
+            <p class='view-header'>VIEWS</p>
+            <p class='view-counter'>02</p>
+          </div>
+        </div>
+        <div class='card-text-container'>
+          <h2>Rick D716-C</h2>
+          <p class='post-date'>Monday 01/23/16 10:22am</p>
+          <div class='url-box'>
+            <p class='post-url'>http://2win.2winstage.com/p/recipients_namehere</p>
+          </div>
+          <p class='playlist-heading'>PLAYLIST</p>
+          <h2 class='playlist-name'>Name of PlayList</h2>
+          <p class='attachments-header'>ATTACHMENTS</p>
+          <h1 class='attachments-counter'>04</h1>
+        </div>
+      </article>
+      <!-- card8 -->
+      <article class='card'>
+        <div class='profile-pic-8'>
+          <button class='share-button'></button>
+          <div class='view-display'>
+            <p class='view-header'>VIEWS</p>
+            <p class='view-counter'>02</p>
+          </div>
+        </div>
+        <div class='card-text-container'>
+          <h2>Rick J22</h2>
+          <p class='post-date'>Monday 01/23/16 10:22am</p>
+          <div class='url-box'>
+            <p class='post-url'>http://2win.2winstage.com/p/recipients_namehere</p>
+          </div>
+          <p class='playlist-heading'>PLAYLIST</p>
+          <h2 class='playlist-name'>Name of PlayList</h2>
+          <p class='attachments-header'>ATTACHMENTS</p>
+          <h1 class='attachments-counter'>04</h1>
+        </div>
+      </article>
+      
+    </section>
   </body>
 </html>
